--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,9 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-react": "^7.26.0",
     "prettier": "^2.4.1"
   }
 }
