--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -5,10 +5,7 @@
     "es6": true
   },
   "plugins": ["import"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module"
