feat: add login and registration forms

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -11,6 +11,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "quotes": [2, "single", { "avoidEscape": true }]
+    "quotes": [2, "single", { "avoidEscape": true }],
+    "react/prop-types": 0
   }
 }
