--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.0.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
+    "formik": "^2.2.9",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -51,6 +54,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-react": "^7.26.0",
-    "prettier": "2.4.1"
-  }
+    "prettier": "2.4.1",
+    "react-redux": "^7.2.6"
+  },
+  "proxy": "http://localhost:8080"
 }
