--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 services:
   postgres:
     image: postgres:latest
+    container_name: postgres
     volumes:
       - .:/docker-entrypoint-initdb.d
     ports:
@@ -10,3 +11,15 @@ services:
       POSTGRES_USER: kek
       POSTGRES_PASSWORD: kek
       POSTGRES_DB: kek
+  app:
+    image: 'mustread-app:latest'
+    build:
+      context: ./server/mustread
+    container_name: app
+    depends_on:
+      - postgres
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/kek
+      - SPRING_DATASOURCE_USERNAME=kek
+      - SPRING_DATASOURCE_PASSWORD=kek
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
