--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           java-version: 16
       - name: Maven Package
-        run: mvn -B clean compile package -DskipTests -f ./server/mustread/pom.xml
+        run: mvn -B clean compile package -DskipTests -f ./server/mustread
         
 #     Set global environment variables:
       - name: set global env
