--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,13 +23,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        working-directory: ./frontend
+        path: ./frontend
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        working-directory: ./frontend
+        path: ./frontend
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
