--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:11.14-bullseye
     container_name: postgres
     volumes:
       - .:/docker-entrypoint-initdb.d
