--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-        path: ./frontend
+        cache-dependency-path: ./frontend
     - run: yarn install --frozen-lockfile
     - run: yarn run build
     - run: yarn test
