--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
-    "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,6 +21,7 @@
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "swiper": "^7.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
